--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,7 +1,166 @@
+$font-stack:   Roboto Condensed;
+$primary-color: #000000;
+$secondary-color: #f99521;
+$tertiary-color: #d76422;
+$quaternary-color: #fefefe;
+$opacity-color: rgba(255, 255, 255, 0.5);
+$default-padding: 1% 0px;
+$default-margin: 5% 10%;
+
+
+/*GLOBAL TYPOGRAPHY*/
+
+body {
+   font: 100% $font-stack;
+   color: $primary-color;
+
+}
+
+h1 {
+  font: 100% $font-stack;
+  color: $primary-color;
+  font-size: 2em;
+
+}
+
+h2 {
+  font: 100% $font-stack;
+  color: $secondary-color;
+  font-size: 1.5em;
+  text-align: center;
+
+}
+
+h3 {
+  font: 100% $font-stack;
+  color: $primary-color;
+  font-size: 1.25em;
+  text-align: center;
+
+}
+
+h4 {
+  font: 100% $font-stack;
+  color: $primary-color;
+  font-size: 1.25em;
+  font-weight: 600;
+
+}
+
+h5 {
+  font: 100% $font-stack;
+  color: $secondary-color;
+  font-size: 1.5em;
+
+}
+
+p {
+  font: 100% $font-stack;
+  color: $primary-color;
+  font-size: .75em;
+
+}
+
+a {
+    font: 100% $font-stack;
+    color: $tertiary-color;
+
+}
+
+img {
+  max-width: 100%;
+}
+
+/* LOGO */
+
+.logo {
+    margin: 0 4% 0 4%;
+    padding: 0 4% 0 4%;
+    font-size: 2em;
+    /* Fallback for web browsers that don't support RGBa */
+    background-color: rgb(255, 255, 255);
+    /* RGBa with opacity */
+    background-color: $opacity-color;
+    border-bottom: solid $secondary-color;
+
+}
+
+/* NAVIGATION */
+
+nav {
+  ul {
+    margin: 0 4% 0 4%;
+    padding: 0 4% 0 4%;
+    list-style: none;
+    float: right;
+
+  }
+
+  li { 
+    display: inline-block; 
+    margin: 1em;
+    /* Fallback for web browsers that don't support RGBa */
+    background-color: rgb(255, 255, 255);
+    /* RGBa with opacity */
+    background-color: $opacity-color;
+    border-bottom: solid $secondary-color;
+
+  }
+
+  a {
+    display: block;
+    padding: 6px 12px;
+    text-decoration: none;
+  }
+}
+
+/* HOME BANNER */
+.banner{
+  /* HTML NOTE - ADD class="banner" to div*/
+  text-align: center;
+  margin: 15% 4% 15% 4%;
+  padding: 0 4% 0 4%;
+
+}
+
+.h1transparency {
+  /* HTML NOTE - ADD class="h1transparency" to h1*/
+    padding: 2%;
+   /* Fallback for web browsers that don't support RGBa */
+    background-color: rgb(255, 255, 255);
+    /* RGBa with opacity */
+    background-color: $opacity-color;
+
+}
+
+/* GALLERY 1 */
+/* HTML NOTE - ADD h3 tag to titles not p tag*/
+.gallery1 {
+    padding: $default-padding;
+    margin: $default-margin;  
+
+}
+
+
+/* Featured Newbie */
+
+.feature {
+    padding: $default-padding;
+    margin: $default-margin; 
+}
+
+
+.oftheweek {  
+    
+}
+
+.wherefrom {
+   }
 
 
 /* Sweep To Top */
 .hvr-sweep-to-top {
+  width:33%;
   display: inline-block;
   vertical-align: middle;
   -webkit-transform: translateZ(0);
@@ -42,4 +201,19 @@
 .hvr-sweep-to-top:hover:before, .hvr-sweep-to-top:focus:before, .hvr-sweep-to-top:active:before {
   -webkit-transform: scaleY(1);
   transform: scaleY(1);
+}
+
+
+/* GALLERY 2 */
+.gallery2 {
+    padding: $default-padding;
+    margin: $default-margin;  
+
+}
+
+/*Footer*/
+/* HTML NOTE - ADD div id=Footer*/
+#footer {
+    padding: $default-padding;
+    margin: $default-margin; 
 }
