--- a/css/main.css
+++ b/css/main.css
@@ -44,34 +44,41 @@ img {
   max-width: 100%; }
 
 /* LOGO */
-.logo {
-  margin: 0 4% 0 4%;
-  padding: 0 4% 0 4%;
-  font-size: 2em;
-  /* Fallback for web browsers that don't support RGBa */
-  background-color: white;
-  /* RGBa with opacity */
-  background-color: rgba(255, 255, 255, 0.5);
-  border-bottom: solid #f99521; }
+.hero {
+  background: url("../img/hero.jpg") center center no-repeat;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../img/hero.jpg");
+  height: 90vh;
+  width: 100%;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  margin-top: -4%; }
+
+  .logo img {
+    max-width: 50%; }
 
 /* NAVIGATION */
 nav ul {
-  margin: 0 4% 0 4%;
-  padding: 0 4% 0 4%;
+  padding: 10px 10px;
   list-style: none;
-  float: right; }
+  float: left;
+  margin: 65px 30px; }
 nav li {
   display: inline-block;
-  margin: 1em;
-  /* Fallback for web browsers that don't support RGBa */
-  background-color: white;
-  /* RGBa with opacity */
-  background-color: rgba(255, 255, 255, 0.5);
-  border-bottom: solid #f99521; }
+  margin: 0 10px;
+  background-color: #f99521;
+  font-family: Roboto Condensed;
+  height: 40px;
+  width: 150px;
+  border-radius: 5px; }
 nav a {
   display: block;
-  padding: 6px 12px;
-  text-decoration: none; }
+  text-align: center;
+  padding-top: 8px;
+  text-decoration: none;
+  color: white;
+  font-size: 1.3em; }
 
 /* HOME BANNER */
 .banner {
@@ -90,58 +97,96 @@ nav a {
 
 /* GALLERY 1 */
 /* HTML NOTE - ADD h3 tag to titles not p tag*/
-.gallery1 {
-  padding: 1% 0px;
-  margin: 5% 10%; }
-
 /* Featured Newbie */
 .feature {
   padding: 1% 0px;
   margin: 5% 10%; }
 
-/* Sweep To Top */
-.hvr-sweep-to-top {
-  width: 33%;
-  display: inline-block;
-  vertical-align: middle;
-  -webkit-transform: translateZ(0);
-  transform: translateZ(0);
-  box-shadow: 0 0 1px transparent;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  -moz-osx-font-smoothing: grayscale;
+/* gallery */
+#gallery {
+  margin: 2% 0 2% -3.01%; }
+  #gallery li {
+    display: inline-block;
+    float: center;
+    margin: 0 -2px;
+    width: 33.44%; }
+
+.box {
+  cursor: pointer;
+  height: 250px;
+  width: 100%;
   position: relative;
-  -webkit-transition-property: color;
-  transition-property: color;
-  -webkit-transition-duration: 0.3s;
-  transition-duration: 0.3s; }
+  overflow: hidden;
+  margin: 0 auto; }
+  .box img {
+    position: absolute;
+    left: 0;
+    -webkit-transition: all 300ms ease-out;
+    -moz-transition: all 300ms ease-out;
+    -o-transition: all 300ms ease-out;
+    -ms-transition: all 300ms ease-out;
+    transition: all 300ms ease-out; }
 
-.hvr-sweep-to-top:before {
-  content: "";
+.box .overbox {
+  background-color: rgba(105, 105, 105, 0.9);
   position: absolute;
-  z-index: -1;
-  top: 0;
+  top: 130px;
   left: 0;
-  right: 0;
-  bottom: 0;
-  background: #2098d1;
-  -webkit-transform: scaleY(0);
-  transform: scaleY(0);
-  -webkit-transform-origin: 50% 100%;
-  transform-origin: 50% 100%;
-  -webkit-transition-property: transform;
-  transition-property: transform;
-  -webkit-transition-duration: 0.3s;
-  transition-duration: 0.3s;
-  -webkit-transition-timing-function: ease-out;
-  transition-timing-function: ease-out; }
+  color: #fff;
+  z-index: 100;
+  -webkit-transition: all 300ms ease-out;
+  -moz-transition: all 300ms ease-out;
+  -o-transition: all 300ms ease-out;
+  -ms-transition: all 300ms ease-out;
+  transition: all 300ms ease-out;
+  opacity: 0;
+  width: 100%;
+  height: 120px; }
 
-.hvr-sweep-to-top:hover, .hvr-sweep-to-top:focus, .hvr-sweep-to-top:active {
-  color: white; }
+.box:hover .overbox {
+  opacity: 0.8; }
 
-.hvr-sweep-to-top:hover:before, .hvr-sweep-to-top:focus:before, .hvr-sweep-to-top:active:before {
-  -webkit-transform: scaleY(1);
-  transform: scaleY(1); }
+.box .overtext .orange-line {
+  -webkit-transition: all 300ms ease-out;
+  -moz-transition: all 300ms ease-out;
+  -o-transition: all 300ms ease-out;
+  -ms-transition: all 300ms ease-out;
+  transition: all 300ms ease-out;
+  transform: translateY(40px);
+  -webkit-transform: translateY(40px); }
+
+.orange-line {
+  background-color: #d76422;
+  height: 5px;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0; }
+
+.box .title {
+  opacity: 0;
+  transition-delay: 0.1s;
+  transition-duration: 0.2s; }
+
+.box:hover .title,
+.box:focus .title {
+  opacity: 1;
+  transform: translateY(0px);
+  -webkit-transform: translateY(0px); }
+
+.text {
+  font-size: 0.75em;
+  opacity: 0;
+  transition-delay: 0.2s;
+  transition-duration: 0.2s;
+  line-height: 1.5em;
+  padding: 7% 15%; }
+
+.box:hover .text,
+.box:focus .text {
+  opacity: 1;
+  transform: translateX(0px);
+  -webkit-transform: translateX(0px); }
 
 /* GALLERY 2 */
 .gallery2 {
