--- a/main.scss
+++ b/main.scss
@@ -74,12 +74,12 @@ img {
 /* LOGO */
 
 .hero {
-  background: url('img/hero.jpg') center center no-repeat;
+  background: url('../img/hero.jpg') center center no-repeat;
   background-image: 
   linear-gradient(
-    rgba(0, 0, 0, 0.7),
-    rgba(0, 0, 0, 0.7)
-    ), url('img/hero.jpg');
+    rgba(0, 0, 0, 1),
+    rgba(112, 128, 144, 0.7)
+    ), url('../img/hero.jpg');
   height: 90vh;
   width:100%;
   -webkit-background-size: cover;
@@ -92,9 +92,11 @@ img {
 .logo {
 	
 	img {
+    display: inline-block;
 		max-width: 50%;
-		margin-top: 30%;
-		text-align: center;
+		margin-top: 12%;
+    margin-left: -3%;
+    text-align: center;
 	}
 }
 
@@ -105,7 +107,7 @@ nav {
     padding: 10px 10px;
     list-style: none;
     float: left;
-    margin: 65px 30px;
+    margin: 65px 0 0 30px;
 
   }
 
@@ -133,8 +135,14 @@ nav {
 .banner{
   /* HTML NOTE - ADD class="banner" to div*/
   text-align: center;
-  margin: 15% 4% 15% 4%;
+  margin: 2% 4% 15% 4%;
   padding: 0 4% 0 4%;
+  font-family: $font-stack;
+
+ p {
+  font-size: 1.3em;
+  color: white;
+ }
 
 }
 
@@ -279,6 +287,64 @@ nav {
 /*Footer*/
 /* HTML NOTE - ADD div id=Footer*/
 #footer {
-    padding: $default-padding;
-    margin: $default-margin; 
+    padding:  1% 0px;
+    margin: 5% 10%; 
+    border-top: solid $secondary-color;
 }
+
+#footer ul {
+    list-style: none;
+    float: left;
+    padding:0 0 0 40px;
+
+  }
+
+#footer li { 
+    display: inline-block; 
+    padding:9px;
+    margin: 0 6px 0 0;
+
+  }
+
+  .social {
+    padding:0 0 0 8%;
+    margin: 0 0 0 0;
+    float:left;
+    width:33%;
+  }
+  .social ul {
+  
+  }
+
+  .social li {
+    margin: 0 30px 0 0;
+  }
+
+  .footer_h5 {
+    padding:0;
+    margin:0;
+  }
+
+  .footer_links {
+    float: left;
+    padding:0 0 0 0;
+    margin: 10;
+    width:59%;
+  }
+
+  .footer_links ul {
+    -webkit-column-count: 3;
+    -moz-column-count: 2;
+    column-count: 2;
+    -webkit-column-gap: 30%;
+    -moz-column-gap: 30%;
+    column-gap: 30%;
+    width: 100%;
+    float:right;
+  }
+
+  .footer_links li {
+    display: inline-block;
+    width: 70%;
+  }
+
