homepage images and styling

--- a/css/main.css
+++ b/css/main.css
@@ -46,7 +46,7 @@ img {
 /* LOGO */
 .hero {
   background: url("../img/hero.jpg") center center no-repeat;
-  background-image: linear-gradient(black, rgba(112, 128, 144, 0.7)), url("../img/hero.jpg");
+  background-image: linear-gradient(black, rgba(105, 105, 105, 0.7)), url("../img/hero.jpg");
   height: 90vh;
   width: 100%;
   -webkit-background-size: cover;
@@ -64,7 +64,7 @@ img {
 
 /* NAVIGATION */
 nav ul {
-  padding: 10px 10px;
+  padding: 20px 10px;
   list-style: none;
   float: left;
   margin: 65px 0 0 30px; }
@@ -94,6 +94,37 @@ nav a {
   .banner p {
     font-size: 1.3em;
     color: white; }
+  .banner a {
+    text-decoration: none; }
+
+.search-button {
+  padding: 0 0 0 0;
+  margin: 0 0 -10px 0;
+  width: 34px;
+  height: 34px;
+  border-radius: 5px;
+  margin-left: 15px; }
+
+.type select {
+  background: transparent;
+  width: 268px;
+  padding: 5px;
+  font-size: 16px;
+  color: #778899;
+  line-height: 1;
+  border: 0;
+  border-radius: 0;
+  height: 34px;
+  -webkit-appearance: none; }
+
+.type {
+  width: 240px;
+  height: 34px;
+  overflow: auto;
+  background: url(../img/down-arrow.png) no-repeat right #ddd;
+  border: 1px solid #ccc; }
+  .type option {
+    color: #ccc; }
 
 .h1transparency {
   /* HTML NOTE - ADD class="h1transparency" to h1*/
@@ -103,12 +134,10 @@ nav a {
   /* RGBa with opacity */
   background-color: rgba(255, 255, 255, 0.5); }
 
-/* GALLERY 1 */
-/* HTML NOTE - ADD h3 tag to titles not p tag*/
-/* Featured Newbie */
-.feature {
-  padding: 1% 0px;
-  margin: 5% 10%; }
+/* Subscribe Section */
+.mailchimp_form {
+  width: 100%;
+  text-align: center; }
 
 /* gallery */
 #gallery {
@@ -117,7 +146,12 @@ nav a {
     display: inline-block;
     float: center;
     margin: 0 -2px;
-    width: 33.44%; }
+    width: 33.44%;
+    text-align: center; }
+
+.stars {
+  padding: 0 0 0 0;
+  margin: 0 0 10px 10px; }
 
 .box {
   cursor: pointer;
@@ -196,16 +230,37 @@ nav a {
   transform: translateX(0px);
   -webkit-transform: translateX(0px); }
 
-/* GALLERY 2 */
-.gallery2 {
+/* Featured Newbie */
+.feature {
   padding: 1% 0px;
   margin: 5% 10%; }
+
+.user_description {
+  float: left;
+  width: 40%; }
+
+.user_image {
+  height: 250px;
+  width: 250px;
+  align: right;
+  float: right;
+  padding: 0 5%; }
+
+.wherefrom {
+  width: 100%;
+  text-align: center;
+  padding-left: 5%; }
+
+/* GALLERY 2 */
+.gallery2 {
+  width: 100%;
+  text-align: center; }
 
 /*Footer*/
 /* HTML NOTE - ADD div id=Footer*/
 #footer {
   padding: 1% 0px;
-  margin: 5% 10%;
+  margin: 5% 2%;
   border-top: solid #f99521; }
 
 #footer ul {
