--- a/css/main.css
+++ b/css/main.css
@@ -45,8 +45,7 @@ img {
 
 /* LOGO */
 .hero {
-  background: url("../img/hero.jpg") center center no-repeat;
-  background-image: linear-gradient(black, rgba(105, 105, 105, 0.7)), url("../img/hero.jpg");
+  background: url("../img/heroImage.png") center center no-repeat;
   height: 90vh;
   width: 100%;
   -webkit-background-size: cover;
@@ -96,6 +95,9 @@ nav a {
     color: white; }
   .banner a {
     text-decoration: none; }
+  .banner span {
+    color: white;
+    font-size: 1.3em; }
 
 .search-button {
   padding: 0 0 0 0;
@@ -106,7 +108,7 @@ nav a {
   margin-left: 15px; }
 
 .type select {
-  background: transparent;
+  background: white;
   width: 268px;
   padding: 5px;
   font-size: 16px;
@@ -115,7 +117,8 @@ nav a {
   border: 0;
   border-radius: 0;
   height: 34px;
-  -webkit-appearance: none; }
+  -webkit-appearance: none;
+  -moz-appearance: none; }
 
 .type {
   width: 240px;
@@ -123,8 +126,9 @@ nav a {
   overflow: auto;
   background: url(../img/down-arrow.png) no-repeat right #ddd;
   border: 1px solid #ccc; }
-  .type option {
-    color: #ccc; }
+
+optgroup {
+  color: #000; }
 
 .h1transparency {
   /* HTML NOTE - ADD class="h1transparency" to h1*/
