--- a/css/main.css
+++ b/css/main.css
@@ -34,7 +34,8 @@ h5 {
 p {
   font: 100% Roboto Condensed;
   color: #000000;
-  font-size: .75em; }
+  font-size: 1em;
+  line-height: 1.5em; }
 
 a {
   font: 100% Roboto Condensed;
@@ -90,6 +91,9 @@ nav li, .small-nav li {
   width: 150px;
   border-radius: 5px; }
 
+nav li:hover, .small-nav li:hover {
+  background-color: #d94930;}
+
 nav a, .small-nav a{
   display: block;
   text-align: center;
@@ -113,6 +117,12 @@ nav a, .small-nav a{
   .banner span {
     color: white;
     font-size: 1.3em; }
+
+.banner select {
+     -moz-appearance: none;
+     -webkit-appearance: none;
+     appearance: none;
+   }
 
 .search-button {
   padding: 0 0 0 0;
@@ -160,11 +170,19 @@ optgroup {
   width: 100%;
   text-align: center; }
 
+.mc-field-group {
+  padding-bottom:20px;
+}
+
 /* gallery */
 
 .stars {
   padding: 0 0 0 0;
   margin: 0 0 10px 10px; }
+
+.centerstars {
+  text-align:center;
+}
 
 .box {
   cursor: pointer;
@@ -229,7 +247,9 @@ optgroup {
   transform: translateY(0px);
   -webkit-transform: translateY(0px); }
 
-.text {
+
+
+.overbox .text {
   font-size: 0.75em;
   opacity: 0;
   transition-delay: 0.2s;
@@ -245,7 +265,6 @@ optgroup {
 
 /* Featured Newbie */
 
-
 .user_image {
   height: 250px;
   width: 250px;
@@ -253,12 +272,37 @@ optgroup {
   float: right;
   padding: 0 5%; }
 
+.user{
+  height: 250px;
+  width: 250px;
+  align: right;
+  padding: 0; }
+
+.profile_info ul, .interests_info ul {
+  list-style: none;
+  margin: 0px;
+  padding: 0px; }
+
+.profile_info li{
+  display: inline;
+  padding: 0px;
+  margin: 0px; }
+
+.interests_info li{
+  display: block;
+  padding: 0px;
+  padding-bottom: 20px;
+  margin: 0px; }
+
+.profile_info h4, .interests_info h2 {
+  margin-top: 0px;
+  text-align: left;
+  }
 
 /* GALLERY 2 */
 .gallery2 {
   float:left;
 }
-
 
 /*Footer*/
 
@@ -310,6 +354,11 @@ optgroup {
   width: 70%; }
 
 /*# sourceMappingURL=main.css.map */
+  
+  .mobile-hide {
+    display:none;
+  }
+
 
 
 @media screen and (max-width: 900px) {    
@@ -322,6 +371,18 @@ optgroup {
 }
 
 @media screen and (max-width: 620px) {    
+
+  .mobile-hide {
+    display:inline;
+  }
+
+  .hero-container {
+    display:none;
+  }
+
+  .subscribe-container {
+    padding-top: 80px;
+  }
 
   .smaller-logo img {
     display: inline-block;
